Fix input bar alignments

--- a/src/css/InputStyles.css
+++ b/src/css/InputStyles.css
@@ -4,7 +4,17 @@
     padding: 30px;
     margin-top: 50px;
 
-    /* border: solid blue 3px; */
+    /* border: solid blue 2px; */
+}
+
+.sub-input-bar {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    /* margin: 0; */
+    /* padding: 0; */
+
+    /* border: solid 2px purple; */
 }
 
 input, select {
@@ -13,6 +23,9 @@ input, select {
     font-size: 1em;
     margin: 3px;
     text-align: center;
+
+    /* margin: 0;
+    padding: 0; */
 
     /* border: solid blue 1px; */
 }
@@ -27,4 +40,28 @@ input, select {
     margin-left: auto;
     margin-right: auto;
     line-height: 2em;
+}
+
+.input-submit {
+    margin-left: 20px;
+}
+
+
+.country-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 3px;;
+    padding: 0;
+
+    height: 100%;
+    /* border: 2px solid red; */
+}
+.country-img {
+    max-width: 100%;
+    max-height: 100%;
+    margin: 0;
+    padding: 0;
+    height: 20px;
+    width: 50px;
 }
